class Settings:
    resource_path = ''
    REFRESH_RATE = 100
    GAMES = {'sweeper':'sweeper', 'RussiaBox':'RussiaBox'}
